--- a/index.html
+++ b/index.html
@@ -1,29 +1,20 @@
-<html lang="en">
-	<head>
-		<meta charset="UTF-8">
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Pac-Man</title>
-		<link rel="stylesheet" href="style.css">
-		<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
-        <script src="https://kit.fontawesome.com/ca42bbbf84.js" crossorigin="anonymous"></script>
-        <!-- <script src="snow.js"></script> -->
-	</head>
-
-	<body>
-        <button id="play"  onClick="document.getElementById('play').style.display = 'none'; document.getElementById('h2bestScore').style.display = 'block'; document.getElementById('footer').style.display = 'none'; document.getElementById('mobile').style.display = 'none'">Click here to play</button>
-        <script src="app.js" charset="utf-8"></script>
-        <div class="musicOn">
-            <img src="packman.png" alt="Logo Pac-Man" id="logo">
-        </div>
-        <h2>Score : <span id="score">0</span></h2>
-        <p id="computer">Use <kbd>←</kbd> <kbd>↑</kbd> <kbd>→</kbd> <kbd>↓</kbd> to play</p>
-        <p id="mobile">Swipe Up, Down, Left or Right to move Pac-Man</p>
-        <div class="grid"></div>
-        <h2 id="h2bestScore" style="display: none">Your best score : <span id="bestScore">0</span></h2>
-        <div class="musicOn">
-            <audio id="audio" style="display:none;" src="Fun Christmas - AShamaluevMusic.mp3" controls autoplay loop onloadeddata="setHalfVolume()">
-        </div>
-        <footer id="footer">PAC-MAN™ & Emily</footer>
-        <script src="script.js"></script>
-	</body>
+    <link rel="icon" type="image/x-icon" href="img/logo.png">
+    <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/ca42bbbf84.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>PacMan - Testing</title>
+</head>
+<body>
+    <h1 style="text-align:center">Testing...</h1>
+    <canvas id="screen"></canvas>
+    <script type="text/javascript" src="src/constant.js"></script>
+    <script type="text/javascript" src="src/Grid.js"></script>
+    <script type="text/javascript" src="src/Screen.js"></script>
+    <script type="text/javascript" src="src/app.js"></script>
+</body>
 </html>
