Wall 완성+객제 좌표계 변경(cord->x,y속성)+그리드 참조 관계 역전

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <title>PacMan - Testing</title>
 </head>
 <body>
-    <h1 style="text-align:center">Testing...</h1>
+    <h1>Testing...</h1>
     <canvas id="screen"></canvas>
     <script type="text/javascript" src="src/constant.js"></script>
+    <script type="text/javascript" src="src/Wall.js"></script>
     <script type="text/javascript" src="src/Grid.js"></script>
     <script type="text/javascript" src="src/Screen.js"></script>
     <script type="text/javascript" src="src/app.js"></script>
