--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="img/logo.png">
+    <link rel="icon" type="image/x-icon" href="img/cherry.png">
     <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ca42bbbf84.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
@@ -12,10 +12,12 @@
 <body>
     <h1>Testing...</h1>
     <canvas id="screen"></canvas>
+    <audio id="music" src="TheFatRat - Unity.mp3" autoplay loop></audio>
     <script type="text/javascript" src="src/constant.js"></script>
     <script type="text/javascript" src="src/Wall.js"></script>
+    <script type="text/javascript" src="src/Entity.js"></script>
     <script type="text/javascript" src="src/Grid.js"></script>
     <script type="text/javascript" src="src/Screen.js"></script>
-    <script type="text/javascript" src="src/app.js"></script>
 </body>
 </html>
+<script type="text/javascript" src="src/app.js"></script>
