--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 <body>
     <h1>Testing...</h1>
     <canvas id="screen"></canvas>
+    <ol id="record-container"></ol>
     <audio id="music" src="TheFatRat - Unity.mp3" controls loop></audio>
 </body>
 </html>
 <script type="text/javascript" src="src/constant.js"></script>
+<script type="text/javascript" src="src/Record.js"></script>
 <script type="text/javascript" src="src/Wall.js"></script>
 <script type="text/javascript" src="src/Entity.js"></script>
 <!-- <script type="text/javascript" src="src/Ghost.js"></script> -->
